kubernetes/apps/downloads/sabnzbd/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: downloads
  labels:
    app: sabnzbd
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: sabnzbd
